--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,19 @@
 spring.application.name=FileSharing
 
-
-spring.datasource.url=jdbc:mysql://localhost:3306/file_sharing?useSSL=false&serverTimezone=UTC
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/file_sharing?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=2256
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JPA & Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+# Thymeleaf
+spring.thymeleaf.cache=false
+
+# Spring Security default user (you can remove these if not needed)
 spring.security.user.name=admin
 spring.security.user.password=admin
-
-spring.thymeleaf.cache=false
